# google-places

./: .env  .env.example  .gitignore  .pre-commit-config.yaml  README.md  places.db  pyproject.toml  requirements.txt
src/: google_places.py  main.py  storage.py
src/app/use_cases/: collect_places.py  enrich_emails.py
src/core/: entities.py  errors.py  ports.py
src/infrastructure/persistence/sqlite/: db.py  place_repository.py
src/infrastructure/providers/places/: client.py
src/infrastructure/scrapers/: email_scraper.py
src/interface/: cli.py
src/utils/: config.py  logging.py
